add balance, reserve and revenue methods
